@@ -1,3 +1,4 @@
+Water tower: Don't start the tank at the maximum height so the user can drag it up and down
 Water tower: Added a button to fill up the water tank
 Water tower: Made faucets remain on instead of snapping to zero when the user lets go
 Moved the red door in front of the hose
